faq card fix on mobile. centered button

--- a/public/css/custom-truth-staking.css
+++ b/public/css/custom-truth-staking.css
@@ -461,6 +461,10 @@
 
 }
 
+.faq-card-button {
+  white-space: normal;
+}
+
 .about-page h4 {
   margin-left: 10rem 0;
 }
